fix a z-indexing issue with carousal buttons

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ img {
     width: 0vw;
     height: 100vh;
     background-color: rgb(23 22 93 / 60%);
-    z-index: 2;
+    z-index: 4;
     transition: 0.2s ease-in-out;
 }
 
@@ -147,7 +147,7 @@ section.hero-section {
         animation: fade-in-top 0.5s ease-in-out 1;
         transition: 0.2s ease-in;
         position: relative;
-        z-index: 4;
+        z-index: 6;
 
 
         img.logo {
@@ -238,7 +238,7 @@ section.hero-section {
             width: calc(100vw - 40px);
             margin-inline: auto;
             padding-top: 10px;
-            z-index: 4;
+            z-index: 6;
 
             img.logo {
                 width: 150px;
@@ -434,7 +434,7 @@ section.team-section {
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 4;
+            z-index: 2;
             font-size: 26px;
             color: #fff;
             background-color: #5314cd63;
